--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>project01</title>
+        <title>Фонд Новая Армения, Пожертвование, Шаг 1</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
@@ -9,29 +9,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
         <!-- Bootstrap CSS -->
-        <link href="framework/bootstrap421/css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="customization/tools/baguetteBox.min.css">
-
+        <link href="framework/bootstrap4.2.1/css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="customization/styles/general-rules.css">
-<!--        <link rel="stylesheet" href="customization/styles/landing/section02.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section03.css">-->
         <link rel="stylesheet" href="customization/styles/landing/section04.css">
-<!--        <link rel="stylesheet" href="customization/styles/landing/section05.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section06.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section07.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section08.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section09.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section10.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/landing/section11.css">-->
         <link rel="stylesheet" href="customization/styles/landing/section12.css">
-<!--        <link rel="stylesheet" href="customization/styles/tool01.css">-->
-<!--        <link rel="stylesheet" href="customization/styles/debugger.css">-->
     </head>
 
     <body>
 
         <section class="section04 text-center">
-
             <container>
                 <div class="row">
                     <div class="col-md-2"></div>
@@ -48,7 +34,7 @@
                     <div class="col-md-2"></div>
                     <div class="col-md-8 mycontent">
                         <h2>Шаг 1</h2>
-                        <h1>Если Вы готовы сделать пожертвование</h1>
+                        <h1>Как сделать пожертвование?</h1>
                         <p>чтобы перевести в наш фонд вашу материальную помощь просто нажмите ниже на кнопку "Начать" и далее следуйте инструкциям, нужно будет ввести реквизиты вашей банковской карты</p>
 
                         <form action="http://www.new-arm.am/">
@@ -92,15 +78,10 @@
         </section>
         <!-- /.section13 -->
 
-
-<!--        <button class="DoScrollUp"><img src="https://img.icons8.com/ios/50/000000/send-letter&#45;&#45;v1.png"/></button>-->
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="library/jquery-3.3.1.js"></script>
-        <script src="framework/bootstrap421/js/popper.min.js"></script>
-        <script src="framework/bootstrap421/js/bootstrap.js"></script>
-        <script src="customization/tools/baguetteBox.min.js"></script>
-<!--        <script src="customization/scripts/my.js"></script>-->
-<!--        <script src="customization/tools/free-kit-form-fontawesome-com-ac6a64edb7.js"></script>-->
-        </body>
+        <script src="framework/bootstrap4.2.1/js/popper.min.js"></script>
+        <script src="framework/bootstrap4.2.1/js/bootstrap.js"></script>
+    </body>
 </html>
