--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 
         <!-- Bootstrap CSS -->
         <link href="framework/bootstrap4.2.1/css/bootstrap.css" rel="stylesheet">
-        <link rel="stylesheet" href="customization/styles/general-rules.css">
-        <link rel="stylesheet" href="customization/styles/landing/section04.css">
-        <link rel="stylesheet" href="customization/styles/landing/section12.css">
+        <link rel="stylesheet" href="customization/body.css">
+        <link rel="stylesheet" href="customization/section02/style/section02.css">
+        <link rel="stylesheet" href="customization/section03/style/section03.css">
     </head>
 
     <body>
-
-        <section class="section04 text-center">
+        <div class="section02 text-center">
             <container>
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 mycontent">
                         <div class="text-center align-self-center photo-box">
-                            <img src="customization/pictures/photo-gevorg-02.jpg" class="photo-item" alt="photo">
+                            <img src="customization/section02/picture/photo-gevorg-02.jpg" class="photo-item" alt="photo">
                         </div>
                         <h2>Эти добрые дела мы сделаем благодаря Вам!</h2>
                         <p>Геворг Рубенович Суджян <br> — основатель и президент благотворительной организации <br> «Новая Армения Родина — Диаспора»</p>
@@ -35,22 +34,24 @@
                     <div class="col-md-8 mycontent">
                         <h2>Шаг 1</h2>
                         <h1>Как сделать пожертвование?</h1>
-                        <p>чтобы перевести в наш фонд вашу материальную помощь просто нажмите ниже на кнопку "Начать" и далее следуйте инструкциям, нужно будет ввести реквизиты вашей банковской карты</p>
+                        <p>чтобы перевести в наш фонд Вашу материальную денежную помощь просто нажмите ниже на кнопку "Начать" и далее следуйте инструкциям, нужно будет ввести реквизиты вашей банковской карты</p>
 
                         <form action="http://www.new-arm.am/">
 <!--                            <div class="form-group">-->
 <!--                                <input type="number" class="form-summa-donation" id="summa" placeholder="сумма в рублях">-->
 <!--                            </div>-->
                             <button type="submit" class="btn btn-primary">Начать</button>
+                            <div>
+                                <p>или</p>
+                                <a href="http://www.new-arm.am/?lang=ru">Вернуться на сайт</a>
+                            </div>
                         </form>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
             </container>
-        </section>
-        <!-- /.section04 -->
-
-        <section class="section12">
+        </div>
+        <div class="section03">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-12">
@@ -60,23 +61,20 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- /.section12 -->
-
-        <section class="section13">
+        </div>
+        <div class="section04">
             <div class="container">
                 <div class="row text-center">
 
                     <div class="col-12">
                         <div class="row text-center d-flex justify-content-center nav">
-                            <div class="col-md-12 nav-item">&copy; 2018-2020</div>
+                            <div class="col-md-12 nav-item">&copy;2018-2020</div>
                         </div>
                     </div>
 
                 </div>
             </div>
-        </section>
-        <!-- /.section13 -->
+        </div>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
