--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
-
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
         <!-- Bootstrap CSS -->
         <link href="framework/bootstrap4.2.1/css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="customization/body.css">
         <link rel="stylesheet" href="customization/section02/style/section02.css">
         <link rel="stylesheet" href="customization/section03/style/section03.css">
+        <link rel="stylesheet" href="customization/section04/style/section04.css">
+<!--        <link rel="stylesheet" href="customization/debugger.css">-->
     </head>
 
     <body>
@@ -37,9 +37,9 @@
                         <p>чтобы перевести в наш фонд Вашу материальную денежную помощь просто нажмите ниже на кнопку "Начать" и далее следуйте инструкциям, нужно будет ввести реквизиты вашей банковской карты</p>
 
                         <form action="http://www.new-arm.am/">
-<!--                            <div class="form-group">-->
-<!--                                <input type="number" class="form-summa-donation" id="summa" placeholder="сумма в рублях">-->
-<!--                            </div>-->
+                            <!--                            <div class="form-group">-->
+                            <!--                                <input type="number" class="form-summa-donation" id="summa" placeholder="сумма в рублях">-->
+                            <!--                            </div>-->
                             <button type="submit" class="btn btn-primary">Начать</button>
                             <div>
                                 <p>или</p>
@@ -51,7 +51,7 @@
                 </div>
             </container>
         </div>
-        <div class="section03">
+        <div class="section03 align-self-stretch">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-12">
@@ -75,7 +75,6 @@
                 </div>
             </div>
         </div>
-
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="library/jquery-3.3.1.js"></script>
