--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- Bootstrap CSS -->
         <link href="framework/bootstrap4.2.1/css/bootstrap.css" rel="stylesheet">
         <link rel="stylesheet" href="customization/body.css">
+        <link rel="stylesheet" href="customization/section01/section01.css">
         <link rel="stylesheet" href="customization/section02/style/section02.css">
         <link rel="stylesheet" href="customization/section03/style/section03.css">
         <link rel="stylesheet" href="customization/section04/style/section04.css">
@@ -16,41 +17,68 @@
     </head>
 
     <body>
-        <div class="section02 text-center">
+
+
+        <div class="section01-first-display text-center">
             <container>
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 mycontent">
-                        <div class="text-center align-self-center photo-box">
-                            <img src="customization/section02/picture/photo-gevorg-02.jpg" class="photo-item" alt="photo">
-                        </div>
-                        <h2>Эти добрые дела мы сделаем благодаря Вам!</h2>
-                        <p>Геворг Рубенович Суджян <br> — основатель и президент благотворительной организации <br> «Новая Армения Родина — Диаспора»</p>
-                    </div>
-                    <div class="col-md-2"></div>
-                </div>
-                <div class="row">
-                    <div class="col-md-2"></div>
-                    <div class="col-md-8 mycontent">
-                        <h2>Шаг 1</h2>
-                        <h1>Как сделать пожертвование?</h1>
-                        <p>чтобы перевести в наш фонд Вашу материальную денежную помощь просто нажмите ниже на кнопку "Начать" и далее следуйте инструкциям, нужно будет ввести реквизиты вашей банковской карты</p>
+                        <div class="">
+                            <div class="container-fluid my-top-menu">
+                                <div class="row">
 
-                        <form action="http://www.new-arm.am/">
-                            <!--                            <div class="form-group">-->
-                            <!--                                <input type="number" class="form-summa-donation" id="summa" placeholder="сумма в рублях">-->
-                            <!--                            </div>-->
-                            <button type="submit" class="btn btn-primary">Начать</button>
-                            <div>
-                                <p>или</p>
-                                <a href="http://www.new-arm.am/?lang=ru">Вернуться на сайт</a>
+                                    <div class="col-md-3  d-flex align-items-center">
+                                        <a href="http://www.new-arm.am"><img class="mt-4 mb-4" src="customization/section01/logotype01.png"/></a>
+                                    </div>
+                                    <div class="col-md-9 pr-0 pl-0  d-flex justify-content-end">
+
+                                    </div>
+
+                                </div>
                             </div>
-                        </form>
+
+                        </div>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
             </container>
         </div>
+        <div class="section02 text-center">
+        <container>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 mycontent">
+                    <div class="text-center align-self-center photo-box">
+                        <img src="customization/section02/picture/photo-gevorg-02.jpg" class="photo-item" alt="photo">
+                    </div>
+                    <h2>Эти добрые дела мы сделаем благодаря Вам!</h2>
+                    <p>Геворг Рубенович Суджян <br> — основатель и президент благотворительной организации <br> «Новая Армения Родина — Диаспора»</p>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 mycontent">
+                    <h2>Шаг 1</h2>
+                    <h1>Как сделать пожертвование?</h1>
+                    <p>чтобы перевести в наш фонд Вашу материальную денежную помощь просто нажмите ниже на кнопку "Начать" и далее следуйте инструкциям, нужно будет ввести реквизиты вашей банковской карты</p>
+
+                    <form action="http://www.new-arm.am/">
+                        <!--                            <div class="form-group">-->
+                        <!--                                <input type="number" class="form-summa-donation" id="summa" placeholder="сумма в рублях">-->
+                        <!--                            </div>-->
+                        <button type="submit" class="btn btn-primary">Начать</button>
+                        <div>
+                            <p>или</p>
+                            <a href="http://www.new-arm.am/?lang=ru">Вернуться на сайт</a>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+        </container>
+    </div>
         <div class="section03 align-self-stretch">
             <div class="container">
                 <div class="row text-center">
