--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <link rel="stylesheet" href="customization/section03/style/section03.css">
         <link rel="stylesheet" href="customization/section04/style/section04.css">
 <!--        <link rel="stylesheet" href="customization/debugger.css">-->
-    </head>
+<!--    </head>-->
 
     <body>
 
 
-        <div class="section01-first-display text-center">
+        <div class="section01 text-center">
             <container>
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8 mycontent">
-                        <div class="">
+
                             <div class="container-fluid my-top-menu">
-                                <div class="row">
+                                <div class="row my-logo">
 
                                     <div class="col-md-3  d-flex align-items-center">
-                                        <a href="http://www.new-arm.am"><img class="mt-4 mb-4" src="customization/section01/logotype01.png"/></a>
+                                        <a href="http://www.new-arm.am"><img src="customization/section01/logotype01.png"/></a>
                                     </div>
                                     <div class="col-md-9 pr-0 pl-0  d-flex justify-content-end">
 
@@ -38,7 +38,6 @@
                                 </div>
                             </div>
 
-                        </div>
                     </div>
                     <div class="col-md-2"></div>
                 </div>
